--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ An AMP HTML tutorial - learn the different building blocks of an AMP HTML file. 
     <!--
     AMP HTML files require a canonical link pointing to the regular HTML. If no HTML version exists, it should point to itself.
   -->
-    <link rel="canonical" href="<%host%>/introduction/hello_world/">
+    <link rel="canonical" href="https://naughty-lumiere-036247.netlify.com/">
     <!--
     AMP HTML files require a viewport declaration. It's recommended to include initial-scale=1.
   -->
