--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@ An AMP HTML tutorial - learn the different building blocks of an AMP HTML file. 
         </template>
     </amp-list> -->
 
-    <amp-list width="auto" height="100" layout="fixed-height" src="/json/amp-list-urls.json">
+    <!-- <amp-list width="auto" height="100" layout="fixed-height" src="/json/amp-list-urls.json"> -->
+    <amp-list width="auto" height="100" layout="fixed-height" src="https://ampproject-b5f4c.firebaseapp.com/examples/data/amp-list-urls.json">
         <template type="amp-mustache">
             <div class="url-entry">
                 <a href="{{url}}">{{title}}</a>
