--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@ An AMP HTML tutorial - learn the different building blocks of an AMP HTML file. 
     </amp-list> -->
 
     <!-- <amp-list width="auto" height="100" layout="fixed-height" src="/json/amp-list-urls.json"> -->
-    <amp-list width="auto" height="100" layout="fixed-height" src="https://us-central1-amp-11.cloudfunctions.net/helloWorld">
+    <!-- <amp-list width="auto" height="100" layout="fixed-height" src="http://localhost:5000/amp-11/us-central1/helloWorld/"> -->
+    <amp-list width="auto" height="100" layout="fixed-height" src="https://us-central1-amp-11.cloudfunctions.net/helloWorld/">
         <!-- <amp-list credentials="include" width="auto" height="100" layout="fixed-height" src="https://ampproject-b5f4c.firebaseapp.com/examples/data/amp-list-urls.json"> -->
         <template type="amp-mustache">
             <div class="url-entry">
